// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`star-rating-select > renders basic fieldset 1`] = `
"[36m<DocumentFragment>[39m
  [36m<fieldset>[39m
    [36m<legend>[39m
      [0mRate Product[0m
    [36m</legend>[39m
    [36m<div[39m
      [33mclass[39m=[32m"star-rating-select"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio"[39m
      [36m>[39m
        [36m<input[39m
          [33maria-label[39m=[32m"1 star"[39m
          [33mclass[39m=[32m"star-rating-select__control"[39m
          [33mname[39m=[32m"s0-2-star-rating"[39m
          [33mtype[39m=[32m"radio"[39m
          [33mvalue[39m=[32m"1"[39m
        [36m/>[39m
        [36m<span[39m
          [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--star-dynamic"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-star-dynamic"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                  [33mfill[39m=[32m"var(--color-star-rating-full, transparent)"[39m
                  [33mstroke[39m=[32m"var(--color-star-rating-full-stroke, #707070)"[39m
                  [33mstroke-width[39m=[32m"1.25"[39m
                [36m/>[39m
                [36m<path[39m
                  [33mclip-path[39m=[32m"polygon(0 0, 50% 0, 50% 100%, 0 100%)"[39m
                  [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                  [33mfill[39m=[32m"var(--color-star-rating-half, transparent)"[39m
                  [33mstroke[39m=[32m"var(--color-star-rating-half-stroke, #707070)"[39m
                  [33mstroke-width[39m=[32m"1.25"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-star-dynamic"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio"[39m
      [36m>[39m
        [36m<input[39m
          [33maria-label[39m=[32m"2 stars"[39m
          [33mclass[39m=[32m"star-rating-select__control"[39m
          [33mname[39m=[32m"s0-2-star-rating"[39m
          [33mtype[39m=[32m"radio"[39m
          [33mvalue[39m=[32m"2"[39m
        [36m/>[39m
        [36m<span[39m
          [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--star-dynamic"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-star-dynamic"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio"[39m
      [36m>[39m
        [36m<input[39m
          [33maria-label[39m=[32m"3 stars"[39m
          [33mclass[39m=[32m"star-rating-select__control"[39m
          [33mname[39m=[32m"s0-2-star-rating"[39m
          [33mtype[39m=[32m"radio"[39m
          [33mvalue[39m=[32m"3"[39m
        [36m/>[39m
        [36m<span[39m
          [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--star-dynamic"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-star-dynamic"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio"[39m
      [36m>[39m
        [36m<input[39m
          [33maria-label[39m=[32m"4 stars"[39m
          [33mclass[39m=[32m"star-rating-select__control"[39m
          [33mname[39m=[32m"s0-2-star-rating"[39m
          [33mtype[39m=[32m"radio"[39m
          [33mvalue[39m=[32m"4"[39m
        [36m/>[39m
        [36m<span[39m
          [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--star-dynamic"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-star-dynamic"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio"[39m
      [36m>[39m
        [36m<input[39m
          [33maria-label[39m=[32m"5 stars"[39m
          [33mclass[39m=[32m"star-rating-select__control"[39m
          [33mname[39m=[32m"s0-2-star-rating"[39m
          [33mtype[39m=[32m"radio"[39m
          [33mvalue[39m=[32m"5"[39m
        [36m/>[39m
        [36m<span[39m
          [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--star-dynamic"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-star-dynamic"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</div>[39m
  [36m</fieldset>[39m
[36m</DocumentFragment>[39m"
`;

exports[`star-rating-select > renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"star-rating-select"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"1"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-star-dynamic"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-full, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-full-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
              [36m<path[39m
                [33mclip-path[39m=[32m"polygon(0 0, 50% 0, 50% 100%, 0 100%)"[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-half, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-half-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"2"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"3"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"4"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"5"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`star-rating-select > renders with 0 selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Rate product"[39m
    [33mclass[39m=[32m"star-rating-select"[39m
    [33mrole[39m=[32m"radiogroup"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"1 star"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"1"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-star-dynamic"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-full, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-full-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
              [36m<path[39m
                [33mclip-path[39m=[32m"polygon(0 0, 50% 0, 50% 100%, 0 100%)"[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-half, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-half-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"2 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"2"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"3 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"3"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"4 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"4"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"5 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"5"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`star-rating-select > renders with 2 selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Rate product"[39m
    [33mclass[39m=[32m"star-rating-select"[39m
    [33mrole[39m=[32m"radiogroup"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"1 star"[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"1"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-star-dynamic"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-full, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-full-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
              [36m<path[39m
                [33mclip-path[39m=[32m"polygon(0 0, 50% 0, 50% 100%, 0 100%)"[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-half, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-half-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"2 stars"[39m
        [33mchecked[39m=[32m""[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"2"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"3 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"3"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"4 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"4"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"5 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"5"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`star-rating-select > renders with 5 selected 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Rate product"[39m
    [33mclass[39m=[32m"star-rating-select"[39m
    [33mrole[39m=[32m"radiogroup"[39m
  [36m>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"1 star"[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"1"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-star-dynamic"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-full, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-full-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
              [36m<path[39m
                [33mclip-path[39m=[32m"polygon(0 0, 50% 0, 50% 100%, 0 100%)"[39m
                [33md[39m=[32m"M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"[39m
                [33mfill[39m=[32m"var(--color-star-rating-half, transparent)"[39m
                [33mstroke[39m=[32m"var(--color-star-rating-half-stroke, #707070)"[39m
                [33mstroke-width[39m=[32m"1.25"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"2 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"2"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"3 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"3"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"4 stars"[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"4"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
    [36m<span[39m
      [33mclass[39m=[32m"star-rating-select__radio"[39m
    [36m>[39m
      [36m<input[39m
        [33maria-label[39m=[32m"5 stars"[39m
        [33mchecked[39m=[32m""[39m
        [33mclass[39m=[32m"star-rating-select__control star-rating-select__control--filled"[39m
        [33mname[39m=[32m"s0-star-rating"[39m
        [33mtype[39m=[32m"radio"[39m
        [33mvalue[39m=[32m"5"[39m
      [36m/>[39m
      [36m<span[39m
        [33mclass[39m=[32m"star-rating-select__radio-icon"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--star-dynamic"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-star-dynamic"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
